--- a/p8105_hw3_jl2361.md
+++ b/p8105_hw3_jl2361.md
@@ -3,12 +3,6 @@ P8105 HW3
 Jennifer Lee (UNI: jl2361)
 2022-10-06
 
-We will first load the necessary libraries.
-
-``` r
-library(tidyverse)
-```
-
 # Problem 1
 
 We load the Instacart data from the p8105.datasets using:
@@ -48,19 +42,111 @@ Load, tidy, and otherwise wrangle the data. Your final dataset should
 include all originally observed variables and values; have useful
 variable names; include a weekday vs weekend variable; and encode data
 with reasonable variable classes. Describe the resulting dataset
-(e.g. what variables exist, how many observations, etc). Traditional
-analyses of accelerometer data focus on the total activity over the day.
-Using your tidied dataset, aggregate across minutes to create a total
-activity variable for each day, and create a table showing these totals.
-Are any trends apparent? Accelerometer data allows the inspection
-activity over the course of the day. Make a single-panel plot that shows
-the 24-hour activity time courses for each day and use color to indicate
-day of the week. Describe in words any patterns or conclusions you can
-make based on this graph.
+(e.g. what variables exist, how many observations, etc).
 
 ``` r
-accel_df = read_csv('data/accel_data.csv')
+accel_df = read_csv('data/accel_data.csv') %>% 
+  janitor::clean_names() %>%
+  mutate(
+    day_type = if_else(day == "Saturday", "weekend", if_else(day == "Sunday", "weekend", "weekday"))) %>%
+      select(week, day_id, day, day_type, everything()) %>%
+  group_by(week, day_id) %>%
+  pivot_longer(
+    activity_1:activity_1440,
+    names_to = "min", 
+    names_prefix = "activity_",
+    values_to = "activity_counts"
+  ) %>%
+  mutate(
+    min = as.numeric(min),
+    activity_counts = round(activity_counts, digits = 0)
+  )
+
+head(accel_df)
+## # A tibble: 6 × 6
+## # Groups:   week, day_id [1]
+##    week day_id day    day_type   min activity_counts
+##   <dbl>  <dbl> <chr>  <chr>    <dbl>           <dbl>
+## 1     1      1 Friday weekday      1              88
+## 2     1      1 Friday weekday      2              82
+## 3     1      1 Friday weekday      3              64
+## 4     1      1 Friday weekday      4              70
+## 5     1      1 Friday weekday      5              75
+## 6     1      1 Friday weekday      6              66
 ```
+
+Traditional analyses of accelerometer data focus on the total activity
+over the day. Using your tidied dataset, aggregate across minutes to
+create a total activity variable for each day, and create a table
+showing these totals. Are any trends apparent?
+
+``` r
+accel_df %>%
+  group_by(week, day_id, day) %>%
+  summarize(
+    total_daily_activity = sum(activity_counts)
+  ) %>%
+knitr::kable()
+```
+
+| week | day_id | day       | total_daily_activity |
+|-----:|-------:|:----------|---------------------:|
+|    1 |      1 | Friday    |               480534 |
+|    1 |      2 | Monday    |                78830 |
+|    1 |      3 | Saturday  |               376254 |
+|    1 |      4 | Sunday    |               631105 |
+|    1 |      5 | Thursday  |               355948 |
+|    1 |      6 | Tuesday   |               307103 |
+|    1 |      7 | Wednesday |               340113 |
+|    2 |      8 | Friday    |               568839 |
+|    2 |      9 | Monday    |               295431 |
+|    2 |     10 | Saturday  |               607175 |
+|    2 |     11 | Sunday    |               422018 |
+|    2 |     12 | Thursday  |               474048 |
+|    2 |     13 | Tuesday   |               423245 |
+|    2 |     14 | Wednesday |               440962 |
+|    3 |     15 | Friday    |               467420 |
+|    3 |     16 | Monday    |               685910 |
+|    3 |     17 | Saturday  |               382928 |
+|    3 |     18 | Sunday    |               467052 |
+|    3 |     19 | Thursday  |               371230 |
+|    3 |     20 | Tuesday   |               381507 |
+|    3 |     21 | Wednesday |               468869 |
+|    4 |     22 | Friday    |               154049 |
+|    4 |     23 | Monday    |               409450 |
+|    4 |     24 | Saturday  |                 1440 |
+|    4 |     25 | Sunday    |               260617 |
+|    4 |     26 | Thursday  |               340291 |
+|    4 |     27 | Tuesday   |               319568 |
+|    4 |     28 | Wednesday |               434460 |
+|    5 |     29 | Friday    |               620860 |
+|    5 |     30 | Monday    |               389080 |
+|    5 |     31 | Saturday  |                 1440 |
+|    5 |     32 | Sunday    |               138421 |
+|    5 |     33 | Thursday  |               549658 |
+|    5 |     34 | Tuesday   |               367824 |
+|    5 |     35 | Wednesday |               445366 |
+
+Accelerometer data allows the inspection activity over the course of the
+day. Make a single-panel plot that shows the 24-hour activity time
+courses for each day and use color to indicate day of the week. Describe
+in words any patterns or conclusions you can make based on this graph.
+
+``` r
+accel_df %>%
+  ggplot(
+    aes(x = min, y = activity_counts, color = day)) +
+      geom_point(alpha = .5) +
+  labs(title = "Daily Activity Graph",
+       x = "Hour (military time)",
+       y = "Activity Counts") +
+  scale_x_continuous(
+    breaks = c(0, 180, 360, 540, 720, 900, 1080, 1260, 1440),
+    labels = c("00:00", "03:00", "06:00", "09:00", "12:00", "15:00", "18:00", "21:00", "24:00")
+  ) 
+```
+
+<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
 
 # Problem 3
 
