knitted attempts at problems 2 and 3

--- a/p8105_hw3_jl2361.md
+++ b/p8105_hw3_jl2361.md
@@ -327,7 +327,10 @@ tmax_tmin =
   drop_na(c(tmax, tmin)) %>%
   ggplot(
     aes(x = tmax, y = tmin)) + 
-  geom_hex()
+  geom_hex() + 
+  labs(x = "TMax (degrees C)",
+       y = "TMin (degrees C)") +
+  theme(legend.text = element_text(size = 5))
  
 snowfall = 
   noaa_df %>%
