short answers for problems 2 and 3 completed

--- a/p8105_hw3_jl2361.md
+++ b/p8105_hw3_jl2361.md
@@ -1,7 +1,7 @@
 P8105 HW3
 ================
 Jennifer Lee (UNI: jl2361)
-2022-10-11
+2022-10-13
 
 # Problem 1
 
@@ -31,21 +31,16 @@ human readers (i.e. produce a 2 x 7 table).
 
 # Problem 2
 
-This problem uses five weeks of accelerometer data collected on a 63
-year-old male with BMI 25, who was admitted to the Advanced Cardiac Care
-Center of Columbia University Medical Center and diagnosed with
-congestive heart failure (CHF). The data can be downloaded here. In this
-spreadsheet, variables activity.\* are the activity counts for each
-minute of a 24-hour day starting at midnight.
+## Data description & cleaning
 
-Load, tidy, and otherwise wrangle the data. Your final dataset should
-include all originally observed variables and values; have useful
-variable names; include a weekday vs weekend variable; and encode data
-with reasonable variable classes. Describe the resulting dataset
-(e.g. what variables exist, how many observations, etc).
+First, we load and tidy the data. The final dataset includes all
+originally observed variables and values, has cleaned variable names,
+includes a weekday vs weekend variable entitled `day_type`, converts
+`min` from a character to numeric variable, rounds `activity_counts` to
+whole numbers, and pivots the activity data from wide to long format.
 
 ``` r
-accel_df = read_csv('data/accel_data.csv') %>% 
+accel_df = read_csv('data/accel_data.csv', show_col_types = FALSE) %>% 
   janitor::clean_names() %>%
   mutate(
     day_type = if_else(day == "Saturday", "weekend", if_else(day == "Sunday", "weekend", "weekday"))) %>%
@@ -60,18 +55,7 @@ accel_df = read_csv('data/accel_data.csv') %>%
     min = as.numeric(min),
     activity_counts = round(activity_counts, digits = 0)
   )
-```
 
-    ## Rows: 35 Columns: 1443
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr    (1): day
-    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-``` r
 head(accel_df)
 ```
 
@@ -85,10 +69,20 @@ head(accel_df)
     ## 5     1      1 Friday weekday      5              75
     ## 6     1      1 Friday weekday      6              66
 
-Traditional analyses of accelerometer data focus on the total activity
-over the day. Using your tidied dataset, aggregate across minutes to
-create a total activity variable for each day, and create a table
-showing these totals. Are any trends apparent?
+To briefly summarize, there are 50400 observations of activity counts
+for each minute of each day across the 5 week study period. Our final
+variables are: `week`, `day_id`, `day`, `day_type`, `min`, and
+`activity_counts`.
+
+Next, we aggregate across minutes to create a total activity variable
+for each day entitled `total_daily_activity`, and create a table showing
+these totals. We notice that there seems to be a trend towards lower
+activity counts in the middle of the week (e.g. Tuesdays and
+Wednesdays), but there is substantial variability per week. For example:
+weeks 1-2, the highest activity counts seem to be recorded over the
+weekend vs. week 3, the highest activity count seems to be recorded on
+Monday vs. week 5, the highest activity counts seem to be recorded on
+Thursday through Friday.
 
 ``` r
 accel_df %>%
@@ -96,54 +90,34 @@ accel_df %>%
   summarize(
     total_daily_activity = sum(activity_counts)
   ) %>%
-knitr::kable()
+  pivot_wider(
+    names_from = "day", 
+    values_from = "total_daily_activity"
+  ) %>%
+  select("week", "Saturday", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday") %>%
+knitr::kable() 
 ```
 
     ## `summarise()` has grouped output by 'week'. You can override using the
     ## `.groups` argument.
 
-| week | day       | total_daily_activity |
-|-----:|:----------|---------------------:|
-|    1 | Friday    |               480534 |
-|    1 | Monday    |                78830 |
-|    1 | Saturday  |               376254 |
-|    1 | Sunday    |               631105 |
-|    1 | Thursday  |               355948 |
-|    1 | Tuesday   |               307103 |
-|    1 | Wednesday |               340113 |
-|    2 | Friday    |               568839 |
-|    2 | Monday    |               295431 |
-|    2 | Saturday  |               607175 |
-|    2 | Sunday    |               422018 |
-|    2 | Thursday  |               474048 |
-|    2 | Tuesday   |               423245 |
-|    2 | Wednesday |               440962 |
-|    3 | Friday    |               467420 |
-|    3 | Monday    |               685910 |
-|    3 | Saturday  |               382928 |
-|    3 | Sunday    |               467052 |
-|    3 | Thursday  |               371230 |
-|    3 | Tuesday   |               381507 |
-|    3 | Wednesday |               468869 |
-|    4 | Friday    |               154049 |
-|    4 | Monday    |               409450 |
-|    4 | Saturday  |                 1440 |
-|    4 | Sunday    |               260617 |
-|    4 | Thursday  |               340291 |
-|    4 | Tuesday   |               319568 |
-|    4 | Wednesday |               434460 |
-|    5 | Friday    |               620860 |
-|    5 | Monday    |               389080 |
-|    5 | Saturday  |                 1440 |
-|    5 | Sunday    |               138421 |
-|    5 | Thursday  |               549658 |
-|    5 | Tuesday   |               367824 |
-|    5 | Wednesday |               445366 |
+| week | Saturday | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday |
+|-----:|---------:|-------:|-------:|--------:|----------:|---------:|-------:|
+|    1 |   376254 | 631105 |  78830 |  307103 |    340113 |   355948 | 480534 |
+|    2 |   607175 | 422018 | 295431 |  423245 |    440962 |   474048 | 568839 |
+|    3 |   382928 | 467052 | 685910 |  381507 |    468869 |   371230 | 467420 |
+|    4 |     1440 | 260617 | 409450 |  319568 |    434460 |   340291 | 154049 |
+|    5 |     1440 | 138421 | 389080 |  367824 |    445366 |   549658 | 620860 |
 
-Accelerometer data allows the inspection activity over the course of the
-day. Make a single-panel plot that shows the 24-hour activity time
-courses for each day and use color to indicate day of the week. Describe
-in words any patterns or conclusions you can make based on this graph.
+## Plot
+
+**Here is a single-panel plot that shows the 24-hour activity time
+courses for each day with color to indicate day of the week.** Based on
+this graph, it appears that activity counts seem to be generally lower
+during the middle of the week (i.e. Wednesdays) and higher on Fridays
+and weekend days. There seem to be spikes in activity counts around
+minutes 540, 720, 990, and 1260 when examining the activity data over
+the course of a single day.
 
 ``` r
 accel_df %>%
@@ -151,11 +125,10 @@ accel_df %>%
     aes(x = min, y = activity_counts, color = day)) +
       geom_point(alpha = .5) +
   labs(title = "Daily Activity Graph",
-       x = "Hour (military time)",
+       x = "Minutes",
        y = "Activity Counts") +
   scale_x_continuous(
-    breaks = c(0, 180, 360, 540, 720, 900, 1080, 1260, 1440),
-    labels = c("00:00", "03:00", "06:00", "09:00", "12:00", "15:00", "18:00", "21:00", "24:00")
+    breaks = c(0, 180, 360, 540, 720, 900, 1080, 1260, 1440)
   ) 
 ```
 
@@ -163,26 +136,84 @@ accel_df %>%
 
 # Problem 3
 
-We load the NY NOAA data from the p8105.datasets package using:
+## Data description
+
+We load the NY NOAA data from the p8105.datasets package and clean the
+variable names.
 
 ``` r
 library(p8105.datasets)
 data("ny_noaa") 
+
+noaa_df = ny_noaa %>%
+  janitor::clean_names()
 ```
 
-The goal is to do some exploration of this dataset. To that end, write a
-short description of the dataset, noting the size and structure of the
-data, describing some key variables, and indicating the extent to which
-missing data is an issue. Then, do or answer the following (commenting
-on the results of each):
+To briefly summarize, there are 2595176 rows / observations and 7
+variables including:
 
-Do some data cleaning. Create separate variables for year, month, and
-day. Ensure observations for temperature, precipitation, and snowfall
-are given in reasonable units. For snowfall, what are the most commonly
-observed values? Why?
+-   `id`: weather station ID (character variable)
+-   `date`: date of observation (date variable)
+-   `prcp`: precipitation in tenths of mm (integer variable)
+-   `snow`: snowfall in mm (integer variable)  
+-   `snwd`: snow depth in mm (integer variable)
+-   `tmax`: maximum temperature in tenths of degrees C (character
+    variable, we will need to convert to a numerical variable)
+-   `tmin`: minimum temperature in tenths of degrees C (character
+    variable, we will need to convert to a numerical variable)
+
+Using the `summary` function, we notice that there are a lot of missing
+data in this dataset, particularly for the following variables: `prcp`,
+`snow`, `snwd`. We cannot meaningfully comment on `tmin` and `tmax` in
+the current state since they are assigned as character variables in the
+original dataset, but a glance at the data with the `head` function
+suggests that missing data is an issue with these variables too.
 
 ``` r
-noaa_df = ny_noaa %>%
+summary(noaa_df)
+```
+
+    ##       id                 date                 prcp               snow       
+    ##  Length:2595176     Min.   :1981-01-01   Min.   :    0.00   Min.   :  -13   
+    ##  Class :character   1st Qu.:1988-11-29   1st Qu.:    0.00   1st Qu.:    0   
+    ##  Mode  :character   Median :1997-01-21   Median :    0.00   Median :    0   
+    ##                     Mean   :1997-01-01   Mean   :   29.82   Mean   :    5   
+    ##                     3rd Qu.:2005-09-01   3rd Qu.:   23.00   3rd Qu.:    0   
+    ##                     Max.   :2010-12-31   Max.   :22860.00   Max.   :10160   
+    ##                                          NA's   :145838     NA's   :381221  
+    ##       snwd            tmax               tmin          
+    ##  Min.   :   0.0   Length:2595176     Length:2595176    
+    ##  1st Qu.:   0.0   Class :character   Class :character  
+    ##  Median :   0.0   Mode  :character   Mode  :character  
+    ##  Mean   :  37.3                                        
+    ##  3rd Qu.:   0.0                                        
+    ##  Max.   :9195.0                                        
+    ##  NA's   :591786
+
+``` r
+head(noaa_df)
+```
+
+    ## # A tibble: 6 × 7
+    ##   id          date        prcp  snow  snwd tmax  tmin 
+    ##   <chr>       <date>     <int> <int> <int> <chr> <chr>
+    ## 1 US1NYAB0001 2007-11-01    NA    NA    NA <NA>  <NA> 
+    ## 2 US1NYAB0001 2007-11-02    NA    NA    NA <NA>  <NA> 
+    ## 3 US1NYAB0001 2007-11-03    NA    NA    NA <NA>  <NA> 
+    ## 4 US1NYAB0001 2007-11-04    NA    NA    NA <NA>  <NA> 
+    ## 5 US1NYAB0001 2007-11-05    NA    NA    NA <NA>  <NA> 
+    ## 6 US1NYAB0001 2007-11-06    NA    NA    NA <NA>  <NA>
+
+## Data cleaning
+
+We clean variable names; create separate variables for year, month, and
+day and convert these to numeric variables; convert `tmax` and `tmin` to
+numeric variables. In terms of units, we divide the temperature values
+by 10 to convert units from tenths of degrees C to degrees C and divide
+the precipitation values by 10 to convert units from tenths of mm to mm.
+
+``` r
+noaa_df = noaa_df %>%
   janitor::clean_names() %>%
   separate(col = date, into = c('year', 'month', 'day'), sep = "-") %>%
   mutate(
@@ -210,38 +241,13 @@ head(noaa_df)
     ## 5 US1NYAB0001  2007    11     5    NA    NA    NA    NA    NA
     ## 6 US1NYAB0001  2007    11     6    NA    NA    NA    NA    NA
 
-``` r
-summary(noaa_df)
-```
-
-    ##       id                 year          month             day       
-    ##  Length:2595176     Min.   :1981   Min.   : 1.000   Min.   : 1.00  
-    ##  Class :character   1st Qu.:1988   1st Qu.: 4.000   1st Qu.: 8.00  
-    ##  Mode  :character   Median :1997   Median : 7.000   Median :16.00  
-    ##                     Mean   :1996   Mean   : 6.565   Mean   :15.73  
-    ##                     3rd Qu.:2005   3rd Qu.:10.000   3rd Qu.:23.00  
-    ##                     Max.   :2010   Max.   :12.000   Max.   :31.00  
-    ##                                                                    
-    ##       prcp              snow             snwd             tmax        
-    ##  Min.   :   0.00   Min.   :  -13    Min.   :   0.0   Min.   :-38.9    
-    ##  1st Qu.:   0.00   1st Qu.:    0    1st Qu.:   0.0   1st Qu.:  5.0    
-    ##  Median :   0.00   Median :    0    Median :   0.0   Median : 15.0    
-    ##  Mean   :   2.98   Mean   :    5    Mean   :  37.3   Mean   : 14.0    
-    ##  3rd Qu.:   2.30   3rd Qu.:    0    3rd Qu.:   0.0   3rd Qu.: 23.3    
-    ##  Max.   :2286.00   Max.   :10160    Max.   :9195.0   Max.   : 60.0    
-    ##  NA's   :145838    NA's   :381221   NA's   :591786   NA's   :1134358  
-    ##       tmin        
-    ##  Min.   :-59.4    
-    ##  1st Qu.: -3.9    
-    ##  Median :  3.3    
-    ##  Mean   :  3.0    
-    ##  3rd Qu.: 11.1    
-    ##  Max.   : 60.0    
-    ##  NA's   :1134420
-
-The statistical software R does not have a built-in function to
-calculate the mode of a dataset, but we can use the following function
-to calculate the mode:
+To find the most commonly observed value or mode for snowfall, we create
+a function to calculate the mode since R does not have a corresponding
+built-in function. We then create another dataset entitled
+`noaa_df_omit` where the missing data for snowfall are dropped, then
+find the mode, which seems to be 0 mm. From this result, we gather that
+mm may not be the most appropriate unit for snowfall and add a new
+variable entitled `snow_inch` to convert mm into inches.
 
 ``` r
 find_mode <- function(x) {
@@ -259,72 +265,99 @@ find_mode(pull(noaa_df_omit, snow))
 
     ## [1] 0
 
-Make a two-panel plot showing the average max temperature in January and
-in July in each station across years. Is there any observable /
-interpretable structure? Any outliers?
+``` r
+noaa_df = noaa_df %>%
+  mutate(
+    snow_inch = snow / 25.4
+  ) %>%
+  select(id, year, month, day, prcp, snow, snow_inch, everything())
+
+head(noaa_df)
+```
+
+    ## # A tibble: 6 × 10
+    ##   id           year month   day  prcp  snow snow_inch  snwd  tmax  tmin
+    ##   <chr>       <dbl> <dbl> <dbl> <dbl> <int>     <dbl> <int> <dbl> <dbl>
+    ## 1 US1NYAB0001  2007    11     1    NA    NA        NA    NA    NA    NA
+    ## 2 US1NYAB0001  2007    11     2    NA    NA        NA    NA    NA    NA
+    ## 3 US1NYAB0001  2007    11     3    NA    NA        NA    NA    NA    NA
+    ## 4 US1NYAB0001  2007    11     4    NA    NA        NA    NA    NA    NA
+    ## 5 US1NYAB0001  2007    11     5    NA    NA        NA    NA    NA    NA
+    ## 6 US1NYAB0001  2007    11     6    NA    NA        NA    NA    NA    NA
+
+## Plots
+
+**Here is a two-panel plot showing the average max temperature in
+January and in July in each station across years.** As expected, the
+average tmax in January is generally lower compared to the average tmax
+in July. There appears to be a lot of year-to-year and
+station-to-station variability, which makes it challenging to make
+conclusions.
+
+In terms of outliers, 1994 and 2004 appear to have been unusually cold
+in January (i.e. lower average tmax); there was one station in 1988 that
+reported a much lower average tmax in July compared to other stations,
+and 1984, 2000, 2004, and 2007 appear to have been unseasonably cooler
+in July (i.e. lower average tmax).
 
 ``` r
 january_averagetmax = 
   noaa_df %>%
-  group_by(month, id) %>%
-  drop_na(tmax) %>%
-  summarize(
-    average_tmax = mean(tmax)) %>% 
   filter(month == "1") %>%
+  group_by(year, month, id) %>%
+  summarize(
+    average_tmax = mean(tmax, na.rm = TRUE)) %>% 
 ggplot( 
-  aes(x = id, y = average_tmax, color = id)) +
-  geom_point(alpha = .5) +
+  aes(x = year, y = average_tmax, group = id)) +
+  geom_line(alpha = .2) +
   labs(
     title = "January Average TMax",
     y = "Temperature (degrees C)") +
-  theme(legend.position = "none",
-        axis.ticks.x = element_blank(),
-        axis.text.x = element_blank(),
-        axis.title.x = element_blank())
+  theme(legend.position = "none") +
+  scale_x_continuous(
+    breaks = c(1980, 1982, 1984, 1986, 1988, 1990, 1992, 1994, 1996, 1998, 2000, 2002, 2004, 2006, 2008, 2010)) + 
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
 ```
 
-    ## `summarise()` has grouped output by 'month'. You can override using the
+    ## `summarise()` has grouped output by 'year', 'month'. You can override using the
     ## `.groups` argument.
 
 ``` r
 july_averagetmax = 
   noaa_df %>%
-  group_by(month, id) %>%
-  drop_na(tmax) %>%
-  summarize(
-    average_tmax = mean(tmax)) %>% 
   filter(month == "7") %>%
+  group_by(year, month, id) %>%
+  summarize(
+    average_tmax = mean(tmax, na.rm = TRUE)) %>% 
 ggplot( 
-  aes(x = id, y = average_tmax, color = id)) +
-  geom_point(alpha = .5) +
+  aes(x = year, y = average_tmax, group = id)) +
+  geom_line(alpha = .2) +
   labs(
     title = "July Average TMax",
-    caption = "Data from the rnoaa package. Each point represents a unique NY weather station.") +
-  theme(legend.position = "none",
-  axis.ticks.x = element_blank(),
-  axis.text.x = element_blank(),
-  axis.title.x = element_blank(),
-  axis.title.y = element_blank())
+    y = "Temperature (degrees C)") +
+  theme(legend.position = "none") +
+  scale_x_continuous(
+    breaks = c(1980, 1982, 1984, 1986, 1988, 1990, 1992, 1994, 1996, 1998, 2000, 2002, 2004, 2006, 2008, 2010)) + 
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
 ```
 
-    ## `summarise()` has grouped output by 'month'. You can override using the
+    ## `summarise()` has grouped output by 'year', 'month'. You can override using the
     ## `.groups` argument.
 
 ``` r
 january_averagetmax + july_averagetmax
 ```
 
-<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
 
-Make a two-panel plot showing (i) tmax vs tmin for the full dataset
-(note that a scatterplot may not be the best option); and (ii) make a
-plot showing the distribution of snowfall values greater than 0 and less
-than 100 separately by year.
+**Here is a two-panel plot showing (i) tmax vs tmin for the full dataset
+using a hexagonal heatmap; and (ii) the distribution of snowfall values
+greater than 0 and less than 100 mm separately by year using a density
+plot.**
 
 ``` r
 tmax_tmin = 
   noaa_df %>%
-  drop_na(c(tmax, tmin)) %>%
   ggplot(
     aes(x = tmax, y = tmin)) + 
   geom_hex() + 
@@ -344,4 +377,4 @@ snowfall =
 tmax_tmin + snowfall
 ```
 
-<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+<img src="p8105_hw3_jl2361_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
