--- a/p8105_hw3_jl2361.Rmd
+++ b/p8105_hw3_jl2361.Rmd
@@ -15,15 +15,13 @@ echo = TRUE,
 warning = FALSE,
   fig.width = 6,
   fig.asp = .6,
-  out.width = "90%"
-)
+  out.width = "90%")
 
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
 options(
   ggplot2.continuous.colour = "viridis",
-  ggplot2.continuous.fill = "viridis"
-)
+  ggplot2.continuous.fill = "viridis")
 
 scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
@@ -45,11 +43,10 @@ Make a table showing the mean hour of the day at which Pink Lady Apples and Coff
 
 # Problem 2 
 
-This problem uses five weeks of accelerometer data collected on a 63 year-old male with BMI 25, who was admitted to the Advanced Cardiac Care Center of Columbia University Medical Center and diagnosed with congestive heart failure (CHF). The data can be downloaded here. In this spreadsheet, variables activity.* are the activity counts for each minute of a 24-hour day starting at midnight.
-
-Load, tidy, and otherwise wrangle the data. Your final dataset should include all originally observed variables and values; have useful variable names; include a weekday vs weekend variable; and encode data with reasonable variable classes. Describe the resulting dataset (e.g. what variables exist, how many observations, etc).
+## Data description & cleaning
+First, we load and tidy the data. The final dataset includes all originally observed variables and values, has cleaned variable names, includes a weekday vs weekend variable entitled `day_type`, converts `min` from a character to numeric variable, rounds `activity_counts` to whole numbers, and pivots the activity data from wide to long format. 
 ```{r}
-accel_df = read_csv('data/accel_data.csv') %>% 
+accel_df = read_csv('data/accel_data.csv', show_col_types = FALSE) %>% 
   janitor::clean_names() %>%
   mutate(
     day_type = if_else(day == "Saturday", "weekend", if_else(day == "Sunday", "weekend", "weekday"))) %>%
@@ -68,43 +65,70 @@ accel_df = read_csv('data/accel_data.csv') %>%
 head(accel_df)
 ```
 
-Traditional analyses of accelerometer data focus on the total activity over the day. Using your tidied dataset, aggregate across minutes to create a total activity variable for each day, and create a table showing these totals. Are any trends apparent?
+To briefly summarize, there are `r nrow(accel_df)` observations of activity counts for each minute of each day across the 5 week study period. Our final variables are: `week`, `day_id`, `day`, `day_type`, `min`, and `activity_counts`.
+
+Next, we aggregate across minutes to create a total activity variable for each day entitled `total_daily_activity`, and create a table showing these totals. We notice that there seems to be a trend towards lower activity counts in the middle of the week (e.g. Tuesdays and Wednesdays), but there is substantial variability per week. For example: weeks 1-2, the highest activity counts seem to be recorded over the weekend vs. week 3, the highest activity count seems to be recorded on Monday vs. week 5, the highest activity counts seem to be recorded on Thursday through Friday. 
 ```{r}
 accel_df %>%
   group_by(week, day) %>%
   summarize(
     total_daily_activity = sum(activity_counts)
   ) %>%
-knitr::kable()
+  pivot_wider(
+    names_from = "day", 
+    values_from = "total_daily_activity"
+  ) %>%
+  select("week", "Saturday", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday") %>%
+knitr::kable() 
 ```
 
-Accelerometer data allows the inspection activity over the course of the day. Make a single-panel plot that shows the 24-hour activity time courses for each day and use color to indicate day of the week. Describe in words any patterns or conclusions you can make based on this graph.
+## Plot
+**Here is a single-panel plot that shows the 24-hour activity time courses for each day with color to indicate day of the week.** Based on this graph, it appears that activity counts seem to be generally lower during the middle of the week (i.e. Wednesdays) and higher on Fridays and weekend days. There seem to be spikes in activity counts around minutes 540, 720, 990, and 1260 when examining the activity data over the course of a single day. 
 ```{r}
 accel_df %>%
   ggplot(
     aes(x = min, y = activity_counts, color = day)) +
       geom_point(alpha = .5) +
   labs(title = "Daily Activity Graph",
-       x = "Hour (military time)",
+       x = "Minutes",
        y = "Activity Counts") +
   scale_x_continuous(
-    breaks = c(0, 180, 360, 540, 720, 900, 1080, 1260, 1440),
-    labels = c("00:00", "03:00", "06:00", "09:00", "12:00", "15:00", "18:00", "21:00", "24:00")
+    breaks = c(0, 180, 360, 540, 720, 900, 1080, 1260, 1440)
   ) 
 ```
 
 # Problem 3 
-We load the NY NOAA data from the p8105.datasets package using:
+
+## Data description
+We load the NY NOAA data from the p8105.datasets package and clean the variable names. 
 ```{r}
 library(p8105.datasets)
 data("ny_noaa") 
+
+noaa_df = ny_noaa %>%
+  janitor::clean_names()
 ```
 
-The goal is to do some exploration of this dataset. To that end, write a short description of the dataset, noting the size and structure of the data, describing some key variables, and indicating the extent to which missing data is an issue. Then, do or answer the following (commenting on the results of each):
+To briefly summarize, there are `r nrow(noaa_df)` rows / observations and `r ncol(noaa_df)` variables including: 
 
-Do some data cleaning. Create separate variables for year, month, and day. Ensure observations for temperature, precipitation, and snowfall are given in reasonable units. For snowfall, what are the most commonly observed values? Why?
+* `id`: weather station ID (character variable)
+* `date`: date of observation (date variable) 
+* `prcp`: precipitation in tenths of mm (integer variable) 
+* `snow`: snowfall in mm (integer variable)  
+* `snwd`: snow depth in mm (integer variable)
+* `tmax`: maximum temperature in tenths of degrees C (character variable, we will need to convert to a numerical variable)
+* `tmin`: minimum temperature in tenths of degrees C (character variable, we will need to convert to a numerical variable)
+
+Using the `summary` function, we notice that there are a lot of missing data in this dataset, particularly for the following variables: `prcp`, `snow`, `snwd`. We cannot meaningfully comment on `tmin` and `tmax` in the current state since they are assigned as character variables in the original dataset, but a glance at the data with the `head` function suggests that missing data is an issue with these variables too.
 ```{r}
-noaa_df = ny_noaa %>%
+summary(noaa_df)
+head(noaa_df)
+```
+
+## Data cleaning
+We clean variable names; create separate variables for year, month, and day and convert these to numeric variables; convert `tmax` and `tmin` to numeric variables. In terms of units, we divide the temperature values by 10 to convert units from tenths of degrees C to degrees C and divide the precipitation values by 10 to convert units from tenths of mm to mm. 
+```{r}
+noaa_df = noaa_df %>%
   janitor::clean_names() %>%
   separate(col = date, into = c('year', 'month', 'day'), sep = "-") %>%
   mutate(
@@ -120,10 +144,9 @@ noaa_df = ny_noaa %>%
   )
 
 head(noaa_df)
-summary(noaa_df)
 ```
 
-The statistical software R does not have a built-in function to calculate the mode of a dataset, but we can use the following function to calculate the mode:
+To find the most commonly observed value or mode for snowfall, we create a function to calculate the mode since R does not have a corresponding built-in function. We then create another dataset entitled `noaa_df_omit` where the missing data for snowfall are dropped, then find the mode, which seems to be 0 mm. From this result, we gather that mm may not be the most appropriate unit for snowfall and add a new variable entitled `snow_inch` to convert mm into inches.
 ```{r}
 find_mode <- function(x) {
   u <- unique(x)
@@ -136,57 +159,62 @@ noaa_df_omit =
   drop_na(snow)
 
 find_mode(pull(noaa_df_omit, snow))
+
+noaa_df = noaa_df %>%
+  mutate(
+    snow_inch = snow / 25.4
+  ) %>%
+  select(id, year, month, day, prcp, snow, snow_inch, everything())
+
+head(noaa_df)
 ```
 
-Make a two-panel plot showing the average max temperature in January and in July in each station across years. Is there any observable / interpretable structure? Any outliers?
+## Plots
+**Here is a two-panel plot showing the average max temperature in January and in July in each station across years.** As expected, the average tmax in January is generally lower compared to the average tmax in July. There appears to be a lot of year-to-year and station-to-station variability, which makes it challenging to make conclusions. 
 
+In terms of outliers, 1994 and 2004 appear to have been unusually cold in January (i.e. lower average tmax); there was one station in 1988 that reported a much lower average tmax in July compared to other stations, and 1984, 2000, 2004, and 2007 appear to have been unseasonably cooler in July (i.e. lower average tmax).
 ```{r}
 january_averagetmax = 
   noaa_df %>%
-  group_by(month, id) %>%
-  drop_na(tmax) %>%
-  summarize(
-    average_tmax = mean(tmax)) %>% 
   filter(month == "1") %>%
+  group_by(year, month, id) %>%
+  summarize(
+    average_tmax = mean(tmax, na.rm = TRUE)) %>% 
 ggplot( 
-  aes(x = id, y = average_tmax, color = id)) +
-  geom_point(alpha = .5) +
+  aes(x = year, y = average_tmax, group = id)) +
+  geom_line(alpha = .2) +
   labs(
     title = "January Average TMax",
     y = "Temperature (degrees C)") +
-  theme(legend.position = "none",
-        axis.ticks.x = element_blank(),
-        axis.text.x = element_blank(),
-        axis.title.x = element_blank())
+  theme(legend.position = "none") +
+  scale_x_continuous(
+    breaks = c(1980, 1982, 1984, 1986, 1988, 1990, 1992, 1994, 1996, 1998, 2000, 2002, 2004, 2006, 2008, 2010)) + 
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
 
 july_averagetmax = 
   noaa_df %>%
-  group_by(month, id) %>%
-  drop_na(tmax) %>%
-  summarize(
-    average_tmax = mean(tmax)) %>% 
   filter(month == "7") %>%
+  group_by(year, month, id) %>%
+  summarize(
+    average_tmax = mean(tmax, na.rm = TRUE)) %>% 
 ggplot( 
-  aes(x = id, y = average_tmax, color = id)) +
-  geom_point(alpha = .5) +
+  aes(x = year, y = average_tmax, group = id)) +
+  geom_line(alpha = .2) +
   labs(
     title = "July Average TMax",
-    caption = "Data from the rnoaa package. Each point represents a unique NY weather station.") +
-  theme(legend.position = "none",
-  axis.ticks.x = element_blank(),
-  axis.text.x = element_blank(),
-  axis.title.x = element_blank(),
-  axis.title.y = element_blank())
+    y = "Temperature (degrees C)") +
+  theme(legend.position = "none") +
+  scale_x_continuous(
+    breaks = c(1980, 1982, 1984, 1986, 1988, 1990, 1992, 1994, 1996, 1998, 2000, 2002, 2004, 2006, 2008, 2010)) + 
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
 
 january_averagetmax + july_averagetmax
 ```
 
-Make a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
-
+**Here is a two-panel plot showing (i) tmax vs tmin for the full dataset using a hexagonal heatmap; and (ii) the distribution of snowfall values greater than 0 and less than 100 mm separately by year using a density plot.**
 ```{r}
 tmax_tmin = 
   noaa_df %>%
-  drop_na(c(tmax, tmin)) %>%
   ggplot(
     aes(x = tmax, y = tmin)) + 
   geom_hex() + 
@@ -205,4 +233,3 @@ snowfall =
 
 tmax_tmin + snowfall
 ```
-
